hello-openshift-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-openshift
  name: hello-openshift
  namespace: hello-openshift
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-openshift
  sessionAffinity: None
  type: ClusterIP
